--- a/.github/workflows/action_unit_test.yml
+++ b/.github/workflows/action_unit_test.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   flutter_test:
     name: run project unit tests
-    run: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
