--- a/.github/workflows/action_android_build.yml
+++ b/.github/workflows/action_android_build.yml
@@ -19,7 +19,7 @@ jobs:
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build apk
-      - uses: action/upload-artifact@v1
+      - uses: action/upload-artifact@v3
         with:
           name: android_release
           path: build/app/outputs/flutter-apk/app-release.apk
@@ -28,7 +28,7 @@ jobs:
         with:
           artifacts: "build/app/outputs/flutter-apk/*.apk"          
       - name: Upload app bundle artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
-          name: appbundle
+          name: android_release
           path: build/app/outputs/flutter-apk/app-release.apk
