--- a/.github/workflows/action_android_build.yml
+++ b/.github/workflows/action_android_build.yml
@@ -19,7 +19,7 @@ jobs:
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build apk
-      - uses: action/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
           name: android_release
           path: build/app/outputs/flutter-apk/app-release.apk
