--- a/.github/workflows/action_android_build.yml
+++ b/.github/workflows/action_android_build.yml
@@ -18,7 +18,7 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build apk
+      - run: flutter build apk --release
       - uses: actions/upload-artifact@v3
         with:
           name: android_release
