--- a/.github/workflows/action_android_build.yml
+++ b/.github/workflows/action_android_build.yml
@@ -24,6 +24,9 @@ jobs:
           name: android_release
           path: build/app/outputs/flutter-apk/app-release.apk
       - name: Create github artifact release # disable this to save storage
+        uses: actions/checkout@v2
+          with:
+            fetch-depth: 0
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/flutter-apk/*.apk"          
