--- a/.github/workflows/action_android_build.yml
+++ b/.github/workflows/action_android_build.yml
@@ -25,10 +25,10 @@ jobs:
           path: build/app/outputs/flutter-apk/app-release.apk
       - name: Create github artifact release # disable this to save storage
         steps:
-          uses: actions/checkout@v2
+          - uses: actions/checkout@v2
             with:
               fetch-depth: 0
-          uses: ncipollo/release-action@v1
+          - uses: ncipollo/release-action@v1
             with:
               artifacts: "build/app/outputs/flutter-apk/*.apk"          
       - name: Upload app bundle artifact
