--- a/.github/workflows/action_android_build.yml
+++ b/.github/workflows/action_android_build.yml
@@ -23,17 +23,20 @@ jobs:
         with:
           name: android_release
           path: build/app/outputs/flutter-apk/app-release.apk
-      - name: Create github artifact release # disable this to save storage
-        steps:
-          - uses: actions/checkout@v2
-            with:
-              fetch-depth: 0
-          - uses: ncipollo/release-action@v1
-            with:
-              artifacts: "build/app/outputs/flutter-apk/*.apk"          
-      - name: Upload app bundle artifact
-        uses: actions/upload-artifact@v3
+  
+  android_release:
+    name: Create github artifact release # disable this to save storage
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
         with:
-          name: android_release
-          path: build/app/outputs/flutter-apk/app-release.apk
-          tag: 'v1.0.0'
+          fetch-depth: 0
+      - uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/flutter-apk/*.apk"          
+  - name: Upload app bundle artifact
+    uses: actions/upload-artifact@v3
+    with:
+      name: android_release
+      path: build/app/outputs/flutter-apk/app-release.apk
+      tag: 'v1.0.0'
