--- a/.github/workflows/action_android_build.yml
+++ b/.github/workflows/action_android_build.yml
@@ -31,12 +31,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/flutter-apk/*.apk"          
-  - name: Upload app bundle artifact
-    uses: actions/upload-artifact@v3
-    with:
-      name: android_release
-      path: build/app/outputs/flutter-apk/app-release.apk
-      tag: 'v1.0.0'
+      - uses: actions/upload-artifact@v3
+        with:
+          name: android_release
+          path: build/app/outputs/flutter-apk/app-release.apk
+          tag: 'v1.0.0'
